# workgrid-tunnel

./: AGENTS.md  Cargo.toml  SETUP-COMMANDS.md  agents-md-additions.md  design.md  specs.md  tasks.md
crates/workgrid-cli/: Cargo.toml
crates/workgrid-cli/src/: main.rs
crates/workgrid-daemon/: Cargo.toml
crates/workgrid-daemon/src/: audit.rs  config.rs  identity.rs  lib.rs
crates/workgrid-protocol/: Cargo.toml
crates/workgrid-protocol/src/: message.rs
crates/workgrid-relay/: Cargo.toml
crates/workgrid-relay/src/: registry.rs  server.rs
crates/workgrid-relay/tests/: pairing.rs  registry.rs
docs/developers/: task-logs.md
docs/plan/: tasks.md
