[workspace]
resolver = "2"
members = [
    "crates/workgrid-protocol",
    "crates/workgrid-relay",
    "crates/workgrid-daemon",
    "crates/workgrid-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jericho <jericho@users.noreply.github.com>"]
repository = "https://github.com/eru123/workgrid-tunnel"


[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
futures-util = "0.3"
tokio-tungstenite = "0.21"
