[package]
name = "workgrid-daemon"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
repository = "https://github.com/eru123/workgrid-tunnel"

[dependencies]
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
base64.workspace = true
anyhow = "1"
workgrid-protocol = { path = "../workgrid-protocol" }
serde_json = "1.0"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
